代码初始化

--- a/MyBlog/src/main/resources/templates/index.html
+++ b/MyBlog/src/main/resources/templates/index.html
@@ -45,9 +45,8 @@
                             <small style="font-size: 13px;color: #808080ad;">多年以后，愿你的城市，有清风，有烈酒，也有人是你的归途。</small>
                         </div>
                         <div class="personal-card-show-connection" style="margin-top: 10px">
-                            <span style="color: #009688">微信：zhy1125694337</span><br>
-                            <span style="color: #009688">QQ：1125694337</span><br>
-                        </div>
+                            <span style="color: #009688">微信：lk6213</span><br>
+                         </div>
                         <div class="personal-card-show-attention_btn">
                             <button class="myCardBtn am-btn am-btn-secondary am-round attention_btn" data-am-offcanvas="{target: '#doc-oc-demo1'}" style="margin-top: 10px">扫描二维码关注我</button>
                         </div>
@@ -76,10 +75,6 @@
                                     </div>
                                     <hr data-am-widget="divider" style="width: 50%" class="am-divider am-divider-dashed" />
                                     <div class="zhy-qq-weixin">
-                                        <div class="zhy-qq-box">
-                                            <p>QQ</p>
-                                            <img src=""  class="qq_code am-img-thumbnail am-radius">
-                                        </div>
                                         <div class="zhy-weixin-box">
                                             <p>微信</p>
                                             <img src=""  class="weixin_code am-img-thumbnail am-radius">
@@ -173,9 +168,8 @@
                         </div>
                         <div class="clear"></div>
                         <div id="connection" style="font-size: 14px">
-                            <span style="color: #009688">微信：zhy1125694337</span><br>
-                            <span style="color: #009688">QQ：1125694337</span><br>
-                            <div id="follow">
+                            <span style="color: #009688">微信：lk6213</span><br>
+                             <div id="follow">
                                 <button class="myCardBtn am-btn am-btn-secondary am-round attention_btn" data-am-offcanvas="{target: '#doc-oc-demo2', effect: 'push'}">扫描二维码关注我</button>
                             </div>
                             <!--左侧栏-->
@@ -203,10 +197,6 @@
                                         </div>
                                         <hr data-am-widget="divider" style="width: 50%" class="am-divider am-divider-dashed" />
                                         <div class="zhy-qq-weixin">
-                                            <div class="zhy-qq-box">
-                                                <p>QQ</p>
-                                                <img src=""  class="qq_code am-img-thumbnail am-radius">
-                                            </div>
                                             <div class="zhy-weixin-box">
                                                 <p>微信</p>
                                                 <img src=""  class="weixin_code am-img-thumbnail am-radius">
