代码初始化

--- a/MyBlog/src/main/resources/templates/index.html
+++ b/MyBlog/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
                             <img src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/weixin.jpg">
                         </div>
                         <div class="personal-card-show-name">
-                            <h4 style="font-weight: 500">张海洋</h4>
+                            <h4 style="font-weight: 500">林奎</h4>
                         </div>
                         <div class="personal-card-show-words">
                             <small style="font-size: 13px;color: #808080ad;">多年以后，愿你的城市，有清风，有烈酒，也有人是你的归途。</small>
@@ -81,15 +81,6 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="personal-card-show-ico">
-                            <hr style="margin-top: 10px">
-                            <div>
-                                <div class="am-u-sm-3"><a href="https://github.com/zhyocean" target="_blank" class="am-icon-github am-icon-sm" title="GitHub" style="color: #337ab7"></a></div>
-                                <div class="am-u-sm-3"><a href="https://gitee.com/zhyocean" class="am-icon-gg am-icon-sm" target="_blank" title="码云" style="color: #337ab7"></a></div>
-                                <div class="am-u-sm-3"><a href="https://weibo.com/5313691144" target="_blank" class="am-icon-weibo am-icon-sm" title="微博" style="color: #337ab7"></a></div>
-                                <div class="am-u-sm-3"><a href="http://www.swpuiot.com" target="_blank" title="翼灵物联网工作室" style="color: #337ab7"><img src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/yilinglogo.png" style="width: 25px"></a></div>
                             </div>
                         </div>
                     </div>
@@ -161,7 +152,7 @@
                             </div>
                             <div class="am-u-sm-7" style="padding: 0 20px 0 0;">
                                 <div class="img-words">
-                                    <h3 id="name">张海洋</h3>
+                                    <h3 id="name">林奎</h3>
                                     <small style="font-size: 13px;color: #808080ad">多年以后，愿你的城市，有清风，有烈酒，也有人是你的归途。</small>
                                 </div>
                             </div>
@@ -207,25 +198,6 @@
                             </div>
                         </div>
                         <hr>
-                        <div class="icons-row">
-                            <div class="icons">
-                                <div class="icon">
-                                    <a href="https://github.com/zhyocean" target="_blank" class="am-icon-github am-icon-md " title="GitHub" data-am-popover="{content: 'GitHub', trigger: 'hover focus'}"></a>
-                                </div>
-                                <div class="icon">
-                                    <a href="https://gitee.com/zhyocean" class="am-icon-gg am-icon-md" target="_blank" title="码云" data-am-popover="{content: '码云', trigger: 'hover focus'}"></a>
-                                </div>
-                                <div class="icon">
-                                    <a href="https://weibo.com/5313691144" target="_blank" class="am-icon-weibo am-icon-md" title="微博" data-am-popover="{content: '微博', trigger: 'hover focus'}"></a>
-                                </div>
-                                <div class="icon">
-                                    <a href="https://blog.csdn.net/swpu_ocean" target="_blank" title="CSDN"><img src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/csdn.jpg" style="width: 30px" data-am-popover="{content: 'CSDN', trigger: 'hover focus'}"></a>
-                                </div>
-                                <div class="icon">
-                                    <a href="http://www.swpuiot.com" target="_blank" title="翼灵物联工作室"><img src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/yilinglogo.png" style="width: 30px" data-am-popover="{content: '翼灵物联工作室', trigger: 'hover focus'}"></a>
-                                </div>
-                            </div>
-                        </div>
                     </div>
 
                     <div class="new-comment">
