代码初始化

--- a/MyBlog/src/main/resources/templates/index.html
+++ b/MyBlog/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
     
-    <link rel="icon" type="image/x-icon" href="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../img/lk_001.jpg">
     <link href="https://lib.baomitu.com/amazeui/2.7.2/css/amazeui.min.css" rel="stylesheet">
     <link href="https://lib.baomitu.com/font-awesome/5.8.0/css/fontawesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/all.css">
@@ -42,7 +42,7 @@
                             <h4 style="font-weight: 500">林奎</h4>
                         </div>
                         <div class="personal-card-show-words">
-                            <small style="font-size: 13px;color: #808080ad;">多年以后，愿你的城市，有清风，有烈酒，也有人是你的归途。</small>
+                            <small style="font-size: 13px;color: #808080ad;">一朵花凋零荒芜不了整个春天，一次跌倒也荒废不了整段旅程。走下去，凭着耐心和拼搏，生活自会给予你全部答案。</small>
                         </div>
                         <div class="personal-card-show-connection" style="margin-top: 10px">
                             <span style="color: #009688">微信：lk6213</span><br>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="am-topbar-right writing am-hide-md-down">
                     <a  href="/editor" target="_blank" style="text-decoration: none">
-                        <img class="am-circle" src="../img/loading.gif" data-src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/writing.png">
+                        <img class="am-circle" src="../img/loading.gif" data-src="../img/writing.png">
                         <span class="write-word">写博客</span>
                     </a>
                 </div>
@@ -153,7 +153,7 @@
                             <div class="am-u-sm-7" style="padding: 0 20px 0 0;">
                                 <div class="img-words">
                                     <h3 id="name">林奎</h3>
-                                    <small style="font-size: 13px;color: #808080ad">多年以后，愿你的城市，有清风，有烈酒，也有人是你的归途。</small>
+                                    <small style="font-size: 13px;color: #808080ad">一朵花凋零荒芜不了整个春天，一次跌倒也荒废不了整段旅程。走下去，凭着耐心和拼搏，生活自会给予你全部答案。</small>
                                 </div>
                             </div>
                         </div>
@@ -168,14 +168,13 @@
                                 <div class="am-offcanvas-bar">
                                     <div class="am-offcanvas-content">
                                         <p>
-                                            我不愿让你一个人 <br/>
-                                            承受这世界的残忍 <br/>
-                                            我不愿眼泪陪你到 永恒<br><br>
-
-                                            很抱歉你的过去我没来及参与<br>
-                                            那么<br>
-                                            余生我陪你度过<br>
-                                            可好
+                                            不去追逐 <br/>
+                                            永远不会拥有<br/>
+                                           不往前走<br><br>
+                                            永远原地停留<br>
+                                            知道自己目的地的人<br>
+                                            才是旅行得最远的人<br>
+                                           
                                         </p>
 
                                         <div class="halving-line">
@@ -470,11 +469,11 @@
                             <div class="zhy-info">
                                 <i class="am-icon-quote-left" style="float: left"></i><br>
                                 <div class="zhy-info-day">
-                                    <p>恰到好处的喜欢最舒服</p>
-                                    <p>你不用多好</p>
-                                    <p>我喜欢就好</p>
-                                    <p>我没有很好</p>
-                                    <p>你不嫌弃就好</p>
+                                    <p>考虑一千次，不如去做一次</p>
+                                    <p>犹豫一万次，不如实践一次</p>
+                                    <p>华丽的跌倒，胜过无谓的彷徨</p>
+                                    <p>将来的你</p>
+                                    <p>一定会感谢现在奋斗的你</p>
                                     <p style="text-align: right;padding-top: 10px">--- zhy</p>
                                 </div>
                                 <i class="am-icon-quote-right" style="float: right"></i>
