--- a/MyBlog/src/main/resources/templates/mylove.html
+++ b/MyBlog/src/main/resources/templates/mylove.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>程序猿张先森 | 我的女孩</title>
+<title>无可救药</title>
 <link type="text/css" rel="stylesheet" href="love/css/default.css">
 <script src="https://lib.baomitu.com/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="love/js/jscex.min.js"></script>
@@ -28,24 +28,32 @@
   <div id="wrap">
     <div id="text" style="top:30px">
       <div id="code"> <font color="#FF0000"> <span class="say"> </span><br>
-      	  <h3><span class="say">你好，小菇凉：</span><br>
-      	  <span class="say"> </span><br>
-          <span class="say">假如这一生可以有999次好运</span><br>
-          <span class="say">我愿意把997次都分给你</span><br>
-          <span class="say">只留两次给自己</span><br>
-          <span class="say">一次是遇见你</span><br>
-          <span class="say">一次是永远陪你走下去</span><br>
+      	  <h3><span class="say">无可救药：</span><br>
+      	  <span class="say">湖心月亮覆盖泥沼 </span><br>
+          <span class="say">倔强的水草 亲吻着船尾</span><br>
+          <span class="say">摇橹的人欲盖弥彰</span><br>
+          <span class="say">怕一阵呼啸</span><br>
+          <span class="say">日夜会颠倒</span><br>
+          <span class="say">摆渡人坐稳</span><br>
+          <span class="say">彼岸且不问 </span><br>
+          <span class="say">召唤谁灵魂</span><br>
+          <span class="say">得失别计较</span><br>
+          <span class="say">答应给明天的一张旧的船票</span><br>
+          <span class="say">把过去的都撕掉</span><br>
+          <span class="say">堆积在心头的崇拜后的烦恼</span><br>
+          <span class="say">逼得偶像要出逃</span><br>
+          <span class="say">你的大实话刚刚好</span><br>
+          <span class="say">给了我渺小的理由</span><br>
+                    <span class="say">也许每个百毒不侵的人</span><br>
+                    <span class="say">曾经都无药可救</span><br>
+                    <span class="say">我们无药可以救</span><br>
+                    <span class="say">海港一远一近摇晃</span><br>
+                    <span class="say">回巢的海鸟 不理会人群</span><br>
+                    <span class="say">离去的人念念不忘</span><br>
+                    <span class="say">试过被爱的甜 背叛多凶险</span><br>
+          
           <span class="say"> </span><br>
-          <span class="say">天上有多少星光</span><br>
-          <span class="say">世间有多少女孩</span><br>
-          <span class="say">但天上只有一个月亮</span><br>
-          <span class="say">世间只有一个你</span><br>
-          <span class="say"> </span><br>
-          <span class="say">你的过去我来不及参与</span><br>
-          <span class="say">你的未来我奉陪到底</span><br>
-          <span class="say">别迷路了，快出现在我面前吧</span><br>
-          <span class="say"> </span><br>
-          <span class="say"><span class="space"></span>  -- Z H Y</span> </font></h3>
+          <span class="say"><span class="space"></span>  -- 张杰</span> </font></h3>
       </div>
 
     </div>
