--- a/MyBlog/src/main/resources/templates/superadmin.html
+++ b/MyBlog/src/main/resources/templates/superadmin.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>程序猿张先森 | 后台管理</title>
+    <title>后台管理</title>
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../img/lk_001.jpg">
 
     <link href="https://lib.baomitu.com/amazeui/2.7.2/css/amazeui.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/admin.css">
@@ -48,7 +48,7 @@
             <div class="am-panel am-panel-default admin-sidebar-panel">
                 <div class="am-panel-bd">
                     <p><span class="am-icon-bookmark"></span> 公告</p>
-                    <p>时光静好，与君语；细水流年，与君同。—— 张先森</p>
+                    <p>时光静好，与君语；细水流年，与君同。—— lk</p>
                 </div>
             </div>
 
@@ -123,7 +123,7 @@
 
         <footer class="admin-content-footer">
             <hr>
-            <p class="am-padding-left">© 2018.程序猿张先森. Licensed under MIT license.</p>
+            <p class="am-padding-left">© 2018.lk. Licensed under MIT license.</p>
         </footer>
     </div>
 
