--- a/MyBlog/src/main/resources/templates/aboutme.html
+++ b/MyBlog/src/main/resources/templates/aboutme.html
@@ -2,14 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:http="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>程序猿张先森 | 关于我</title>
+    <title>关于我</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
-    <meta name="keywords" content="博客,个人,学习,IT,生活,张海洋,程序猿,springboot,java,后端，关于我">
-    <meta name="description" content="张海洋，正宗97后，爱编程。喜欢旅行、摄影、爱生活。专注于Spring,SpringBoot等后端技术探索，以及MySql,Oracle数据库开发和SSM,SSH等后端流行框架学习。">
-
-    <link rel="icon" type="image/x-icon" href="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/favicon.ico">
+     
+    <link rel="icon" type="image/x-icon" href="../img/lk_001.jpg">
     <link rel="stylesheet" type="text/css" href="css/aboutmetimeline.css">
     <link href="https://lib.baomitu.com/lightgallery/1.6.12/css/lightgallery.min.css" rel="stylesheet">
     <link href="https://lib.baomitu.com/amazeui/2.7.2/css/amazeui.min.css" rel="stylesheet">
@@ -73,7 +71,7 @@
                         <div class="zhy-title-QRCode" style="margin-top: 20px">
                             <p><i class="am-icon-quote-left " style="float: left"></i></p><br>
                             <div class="zhy-title-QRCode-word">
-                                <strong>欢迎关注我的微信公众号：程序猿张先森</strong><br>
+                                <strong>欢迎关注我的微信公众号：lk</strong><br>
                                 <img class="enlargePicture" src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/loading.gif" data-src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/weixin.jpg"><br>
                                 <span>该微信公众号与本博客文章同步<br></span>
                             </div>
@@ -251,7 +249,7 @@
                                             <span>2018/07/25</span>
                                         </time>
                                         <aside>
-                                            <p class="things">张先森的个人博客上线</p>
+                                            <p class="things">lk的个人博客上线</p>
                                             <p class="brief"><span class="text-red">接近两个月的搭站之旅，独立完成前后端的搭建，其中的心酸真的只有自己知道，每天高负荷的敲代码，觉得自己真的苍老了许多，不过，付出所带来的回报也是巨大的，感谢两个月坚持下来的自己。</span></p>
                                         </aside>
                                     </section>
