--- a/MyBlog/src/main/resources/templates/editor.html
+++ b/MyBlog/src/main/resources/templates/editor.html
@@ -3,9 +3,9 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="UTF-8">
-    <title>程序猿张先森 | 写文章</title>
+    <title>写文章</title>
 
-    <link rel="icon" type="image/x-icon" href="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../img/lk_001.jpg">
     <link href="https://lib.baomitu.com/amazeui/2.7.2/css/amazeui.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/editormd/editormd.min.css"/>
     <link rel="stylesheet" href="css/all.css">
@@ -28,12 +28,12 @@
         <div class="header">
             <div class="am-topbar" style="margin-bottom: 0">
                 <h1 class="am-topbar-brand">
-                    <a href="/" class="blogTitleName"><img src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/zhy.png" class="imgStyle">程序猿张先森</a>
+                    <a href="/" class="blogTitleName"><img src="../img/lk_001.jpg" class="imgStyle">lk</a>
                 </h1>
 
                 <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse" style="text-align: center">
 
-                    <div class="editor-title"><i class="editor-welcome">Welcome to</i><i class="editor-title-name">张先森</i><i class="editor-title-words">的创作中心</i></div>
+                    <div class="editor-title"><i class="editor-welcome">Welcome to</i><i class="editor-title-name">lk</i><i class="editor-title-words">的创作中心</i></div>
 
                     <div class="am-topbar-right" th:if="${#httpServletRequest.remoteUser}">
                         <div class="am-dropdown" data-am-dropdown="{boundary: '.am-topbar'}">
@@ -56,7 +56,7 @@
                     </div>
                     <div class="am-topbar-right writing am-hide-md-down">
                         <a  href="/editor" target="_blank" style="text-decoration: none">
-                            <img class="am-circle" src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/writing.png">
+                            <img class="am-circle" src="../img/writing.png">
                             <span class="write-word">写博客</span>
                         </a>
                     </div>
