--- a/MyBlog/src/main/resources/templates/mystory.html
+++ b/MyBlog/src/main/resources/templates/mystory.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>程序猿张先森 | 我的故事</title>
+    <title>我的故事</title>
     <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <link rel="icon" type="image/x-icon" href="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../img/lk_001.jpg">
     <meta name="keywords" content="博客,个人,学习,IT,生活,张海洋,程序猿,springboot,java,后端我的故事">
     <meta name="description" content="张海洋，正宗97后，爱编程。喜欢旅行、摄影、爱生活。专注于Spring,SpringBoot等后端技术探索，以及MySql,Oracle数据库开发和SSM,SSH等后端流行框架学习。">
 
@@ -41,7 +41,7 @@
             <div class="am-panel am-panel-default admin-sidebar-panel">
                 <div class="am-panel-bd">
                     <p><span class="am-icon-bookmark"></span> 斯人如彩虹，遇见方知有</p>
-                    <p>从明天开始，做一个幸福的人，喂马、劈柴、周游世界。—— 张先森</p>
+                    <p>从明天开始，做一个幸福的人，喂马、劈柴、周游世界。—— lk</p>
                 </div>
             </div>
         </div>
@@ -162,7 +162,7 @@
                         相册相册你在哪
                     </div>
                     <div class="zhangSire">
-                        —————— 张先森有点懒，还没写这个功能
+                        —————— lk有点懒，还没写这个功能
                     </div>
                 </div>
 
