--- a/MyBlog/src/main/resources/templates/user.html
+++ b/MyBlog/src/main/resources/templates/user.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>程序猿张先森 | 个人中心</title>
-    <link rel="icon" type="image/x-icon" href="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/favicon.ico">
+    <title>个人中心</title>
+    <link rel="icon" type="image/x-icon" href="../img/lk_001.jpg">
 
     <link href="https://lib.baomitu.com/amazeui/2.7.2/css/amazeui.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/admin.css">
@@ -39,7 +39,7 @@
             <div class="am-panel am-panel-default admin-sidebar-panel">
                 <div class="am-panel-bd">
                     <p><span class="am-icon-bookmark"></span> 公告</p>
-                    <p>时光静好，与君语；细水流年，与君同。—— 张先森</p>
+                    <p>时光静好，与君语；细水流年，与君同。—— lk</p>
                 </div>
             </div>
         </div>
