--- a/MyBlog/src/main/resources/templates/aboutme.html
+++ b/MyBlog/src/main/resources/templates/aboutme.html
@@ -38,7 +38,7 @@
 
                             <div class="title-img">
                                 <p>
-                                    <img src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/loading.gif" data-src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/zhy_nice.png" class="enlargePicture am-img-thumbnail am-radius">
+                                    <img src="../img/loading.gif" data-src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/zhy_nice.png" class="enlargePicture am-img-thumbnail am-radius">
                                 </p>
                             </div>
                         </div>
@@ -72,7 +72,7 @@
                             <p><i class="am-icon-quote-left " style="float: left"></i></p><br>
                             <div class="zhy-title-QRCode-word">
                                 <strong>欢迎关注我的微信公众号：lk</strong><br>
-                                <img class="enlargePicture" src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/loading.gif" data-src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/weixin.jpg"><br>
+                                <img class="enlargePicture" src="../img/loading.gif" data-src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/weixin.jpg"><br>
                                 <span>该微信公众号与本博客文章同步<br></span>
                             </div>
                             <p><i class="am-icon-quote-right " style="float: right"></i></p>
@@ -87,7 +87,7 @@
                             <div class="zhy-original-title">
                                 <h1 class="zhy-original-title-h1">初衷</h1>
                                 <p class="zhy-erha">
-                                    <img src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/loading.gif" data-src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/erha.png" class="enlargePicture am-img-thumbnail">
+                                    <img src="../img/loading.gif" data-src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/erha.png" class="enlargePicture am-img-thumbnail">
                                 </p><br><br>
                                 <p><i class="am-icon-quote-left " style="float: left"></i></p><br>
                                 <div class="zhy-original-words">
@@ -121,7 +121,7 @@
                                 <h1 style="font-size: 30px;font-weight: 400">意见反馈</h1>
                             </div>
                             <div class="zhy-erha">
-                                <img src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/loading.gif" data-src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/erha_opinion.gif" class="enlargePicture am-img-thumbnail">
+                                <img src="../img/loading.gif" data-src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/erha_opinion.gif" class="enlargePicture am-img-thumbnail">
                             </div>
                             <div class="zhy-opinion-words">
                                 <p><strong><u><i>若本博客有做的不好的地方(涉及版权及其他问题)，请留言私信我进行整改。</i></u></strong></p>
@@ -137,7 +137,7 @@
                                 <span>心情</span>
                             </div>
                             <div class="zhy-you">
-                                <img src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/loading.gif" data-src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/you.png" class="enlargePicture am-img-thumbnail">
+                                <img src="../img/loading.gif" data-src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/you.png" class="enlargePicture am-img-thumbnail">
                             </div>
                             <p></p>
                             <div class="content">
