--- a/MyBlog/src/main/resources/templates/user.html
+++ b/MyBlog/src/main/resources/templates/user.html
@@ -51,7 +51,7 @@
                 <div class="zhy-personalDate">
                     <div class="personalDateHeadPortrait">
                         <div class="headPortrait">
-                            <img id="headPortrait" src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/loading.gif"/>
+                            <img id="headPortrait" src="../img/loading.gif"/>
                         </div>
                         <div class="headChange">
                             <div class="headPortraitChange">
