代码初始化

--- a/MyBlog/src/main/resources/templates/aboutme.html
+++ b/MyBlog/src/main/resources/templates/aboutme.html
@@ -46,7 +46,7 @@
                             <p><i class="am-icon-quote-left " style="float: left"></i></p><br>
                             <div class="zhy-info">
                                 <p class="zhy-info-words">
-                                    张海洋，目前就读于成都的西南石油大学，一名"不顾正业"的程序猿，所属计科院物联网工程专业，翼灵物联工作室后端开发组组长，沉迷于Java后端技术开发，
+                                    林奎，目前就读于成都的中国石油大学，一名"不顾正业"的程序猿，所属计科院物联网工程专业，翼灵物联工作室后端开发组组长，沉迷于Java后端技术开发，
                                     单身狗一只，但也是一只有梦想有追求的单身狗，一只追求进步和成长的程序猿。<br>
                                     <br>
                                     正宗97后，爱编程。喜欢旅行、摄影、爱生活。非宅男，不掉发，追求不平淡的生活，梦想养一只二哈，当一名铲屎官，渴望一场轰轰烈烈的爱情。
