--- a/MyBlog/src/main/resources/templates/aboutme.html
+++ b/MyBlog/src/main/resources/templates/aboutme.html
@@ -72,7 +72,7 @@
                             <p><i class="am-icon-quote-left " style="float: left"></i></p><br>
                             <div class="zhy-title-QRCode-word">
                                 <strong>欢迎关注我的微信公众号：lk</strong><br>
-                                <img class="enlargePicture" src="../img/loading.gif" data-src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/weixin.jpg"><br>
+                                <img class="enlargePicture" src="../img/loading.gif" data-src="../img/wx.png"><br>
                                 <span>该微信公众号与本博客文章同步<br></span>
                             </div>
                             <p><i class="am-icon-quote-right " style="float: right"></i></p>
