代码初始化

--- a/MyBlog/src/main/resources/templates/superadmin.html
+++ b/MyBlog/src/main/resources/templates/superadmin.html
@@ -144,6 +144,37 @@
         </div>
     </div>
 
+
+ <!--添加分类模态框-->
+    <div class="am-modal am-modal-prompt" tabindex="-1" id="addCategory">
+        <div class="am-modal-dialog">
+            <div class="top am-modal-hd">添加分类</div>
+            <div class="am-modal-bd">
+                <span class="describe">输入需要添加的分类名：</span>
+                <input type="text" class="am-modal-prompt-input">
+            </div>
+            <div class="am-modal-footer">
+                <span class="am-modal-btn" data-am-modal-cancel>取消</span>
+                <span class="am-modal-btn" data-am-modal-confirm>提交</span>
+            </div>
+        </div>
+    </div>
+
+    <!--删除分类模态框-->
+    <div class="am-modal am-modal-prompt" tabindex="-1" id="subCategory">
+        <div class="am-modal-dialog">
+            <div class="top am-modal-hd">删除分类</div>
+            <div class="am-modal-bd">
+                <span class="describe">输入需要删除的分类名：</span>
+                <input type="text" class="am-modal-prompt-input">
+            </div>
+            <div class="am-modal-footer">
+                <span class="am-modal-btn" data-am-modal-cancel>取消</span>
+                <span class="am-modal-btn" data-am-modal-confirm>提交</span>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <!--手机适配显示左侧按钮-->
