--- a/MyBlog/src/main/resources/templates/superadmin.html
+++ b/MyBlog/src/main/resources/templates/superadmin.html
@@ -36,7 +36,7 @@
                     <a class="am-cf" data-am-collapse="{target: '#collapse-nav'}"><span class="am-icon-file"></span> 文章管理 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
                     <ul class="am-list am-collapse admin-sidebar-sub am-in" id="collapse-nav">
                         <li class="superAdminClick articleManagement"><a class="am-cf"><span class="am-icon-check"></span> 文章管理<span class="am-icon-star am-fr am-margin-right admin-icon-yellow"></span></a></li>
-                        <li class="superAdminClick articleComment"><a><span class="am-icon-puzzle-piece"></span> 评论管理<span class="am-badge am-badge-secondary am-margin-right am-fr">24</span></a></li>
+                        <li class="superAdminClick articleThumbsUp"><a><span class="am-icon-thumbs-up"></span> 点赞管理<span class="am-badge am-badge-secondary am-margin-right am-fr">24</span></a></li>
                         <li class="superAdminClick articleCategories"><a><span class="am-icon-th"></span> 分类管理</a></li>
                     </ul>
                 </li>
@@ -92,15 +92,69 @@
             <div class="superFunction" id="articleComment">
                 3
             </div>
-            <div class="superFunction" id="articleCategories">
-                <div class="site-inner">
-                    4
+            
+              <div class="superFunction" id="articleThumbsUp">
+                <div class="subject">
+                    <div class="thumbsUpManagement">
+                        <ol class="am-breadcrumb  am-breadcrumb-slash navigationBar">
+                            <li class="am-active am-icon-home"> 后台管理</li>
+                            <li class="am-active">点赞管理</li>
+                        </ol>
+                        <div class="msgContent am-animation-slide-right">
+                            <!--填充文章点赞信息-->
+                            <div style="height: 800px;">
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="superFunction" id="friendLink">
-                <div class="site-inner">
-                    5
+            
+            <div class="superFunction" id="articleCategories">
+                <div class="subject">
+                    <div class="articleCategoriesManagement">
+                        <ol class="am-breadcrumb  am-breadcrumb-slash navigationBar">
+                            <li class="am-active am-icon-home"> 后台管理</li>
+                            <li class="am-active">分类管理</li>
+                        </ol>
+                        
+                        
+                        
+                         <div class="articles">
+                        <div class="am-g">
+                             <div class="am-u-sm-12">  
+                                    <table class="am-table am-table-bd am-table-striped admin-content-table">  
+                                    
+                                    <tbody class="categoryContent">
+
+                                    </tbody>
+                                  </table>   
+                             </div>
+                       </div>
+                    </div>
+                        
+                        
+                        
+                        
+                        
+                       <!--  <div class="categoryContent">
+                            分类管理
+                        </div> -->
+                    </div>
                 </div>
+            </div>
+            <div class="superFunction" id="addFriendLink">
+                 <div class="am-modal-dialog">
+            <div class="am-modal-hd">添加友链</div>
+            <span>博主：</span>
+            <input id="blogger" type="text" class="am-modal-prompt-input">
+            <span>博客地址：</span>
+            <input id="url" type="text" class="am-modal-prompt-input">
+            <div class="am-modal-footer">
+                <span class="am-modal-btn" data-am-modal-cancel>取消</span>
+                <span class="sureFriendLinkAddBtn am-modal-btn">确定</span>
+            </div>
+        </div>
             </div>
             <div class="superFunction" id="userFeedback">
                 <div class="site-inner">
