--- a/MyBlog/src/main/resources/templates/superadmin.html
+++ b/MyBlog/src/main/resources/templates/superadmin.html
@@ -134,17 +134,27 @@
                     </div>
                         
                         
-                        
-                        
-                        
-                       <!--  <div class="categoryContent">
-                            分类管理
-                        </div> -->
+               
                     </div>
                 </div>
             </div>
-            <div class="superFunction" id="addFriendLink">
-                 <div class="am-modal-dialog">
+            
+               <div class="superFunction" id="friendLink">
+                <div class="subject">
+                    <div class="friendLinkManagement">
+                        <ol class="am-breadcrumb  am-breadcrumb-slash navigationBar">
+                            <li class="am-active am-icon-home"> 后台管理</li>
+                            <li class="am-active">友链管理</li>
+                        </ol>
+                        <div class="friendLinkContent">
+                            <!--填充友链信息-->
+                        </div>
+                    </div>
+                </div>
+            </div>    
+      <!--增加友链模态框-->
+    <div class="am-modal am-modal-alert" tabindex="-1" id="addFriendLink">
+        <div class="am-modal-dialog">
             <div class="am-modal-hd">添加友链</div>
             <span>博主：</span>
             <input id="blogger" type="text" class="am-modal-prompt-input">
@@ -155,7 +165,22 @@
                 <span class="sureFriendLinkAddBtn am-modal-btn">确定</span>
             </div>
         </div>
+    </div>
+
+    <!--删除友链模态框-->
+    <div class="am-modal am-modal-confirm" tabindex="-1" id="deleteFriendLink">
+        <div class="am-modal-dialog">
+            <div class="am-modal-hd">删除友链</div>
+            <div class="am-modal-bd">
+                你确定要删除吗？删除了就无法恢复了呦!
             </div>
+            <div class="am-modal-footer">
+                <span class="am-modal-btn" data-am-modal-cancel>取消</span>
+                <span class="sureFriendLinkDeleteBtn am-modal-btn" data-am-modal-confirm>确定</span>
+            </div>
+        </div>
+    </div>
+            
             <div class="superFunction" id="userFeedback">
                 <div class="site-inner">
                     <div class="userFeedbackInfo">
@@ -177,7 +202,7 @@
 
         <footer class="admin-content-footer">
             <hr>
-            <p class="am-padding-left">© 2018.lk. Licensed under MIT license.</p>
+            <p class="am-padding-left">© 2020.lk. Licensed under MIT license.</p>
         </footer>
     </div>
 
