代码初始化

--- a/MyBlog/src/main/resources/templates/index.html
+++ b/MyBlog/src/main/resources/templates/index.html
@@ -492,9 +492,9 @@
                     </div>
                     <div class="myStory" >
                         <div class="bg-myGirl">
-                            <div><a class="bg-myGirl-a" href="/mylove" target="_blank">我的女孩</a></div>
+                            <div><a class="bg-myGirl-a" href="/405" target="_blank">童话</a></div>
                         </div>
-                        <div class="myStory-words">我的女孩，你还在吗</div>
+                        <div class="myStory-words">听个歌曲放松一下</div>
                     </div>
                     <!--<div class="myStory" >-->
                     <!--<div class="bg-myStory" style="background: url(img/index/ali.jpg) repeat">-->
