--- a/MyBlog/src/main/resources/templates/aboutme.html
+++ b/MyBlog/src/main/resources/templates/aboutme.html
@@ -38,7 +38,7 @@
 
                             <div class="title-img">
                                 <p>
-                                    <img src="../img/loading.gif" data-src="https://zhy-myblog.oss-cn-shenzhen.aliyuncs.com/static/img/zhy_nice.png" class="enlargePicture am-img-thumbnail am-radius">
+                                    <img src="../img/loading.gif" data-src="../img/ao.png" class="enlargePicture am-img-thumbnail am-radius">
                                 </p>
                             </div>
                         </div>
@@ -333,13 +333,14 @@
             </div>
         </div>
     </div>
-    <!--引入共有底部-->
-    <div th:replace="footer :: footer"></div>
+    
 
     <!--消息盒子+反馈-->
     <div th:replace="other :: other"></div>
-</div>
+    <!--引入共有底部-->
+    <div th:replace="footer :: footer"></div>
 
+</div>
 <script src="js/all.js"></script>
 <script src="js/leaveMessage.js"></script>
 <!--放大图片插件-->
