代码初始化

--- a/MyBlog/src/main/resources/templates/friendlylink.html
+++ b/MyBlog/src/main/resources/templates/friendlylink.html
@@ -106,41 +106,8 @@
                         <div class="zhy-friendlylink-title">
                             <i class="am-icon-hashtag "></i><span>友情链接</span>
                         </div>
-                        <div class="zhy-friendlylink-author">
-                            <div class="am-u-sm-4 am-u-lg-4">
-                                <p>
-                                    <i class="am-icon-street-view "></i>
-                                    <a href="http://junxuelian.cn/" target="_blank">一名行进中的码农</a>
-                                </p>
-                                <p>
-                                    <i class="am-icon-street-view "></i>
-                                    <a href="https://sailengsi.com/" target="_blank">赛冷思个人博客</a>
-                                </p>
-                                <p>
-                                    <i class="am-icon-street-view "></i>
-                                    <a href="http://www.csxll.top/" target="_blank">陈晓雷个人博客</a>
-                                </p>
-                            </div>
-                            <div class="am-u-sm-4 am-u-lg-4">
-                                <p>
-                                    <i class="am-icon-street-view "></i>
-                                    <a href="http://www.lipan.xyz/" target="_blank">Li Pan's 博客</a>
-                                </p>
-                                <p>
-                                    <i class="am-icon-street-view "></i>
-                                    <a href="https://naget.github.io/" target="_blank">naget的小屋</a>
-                                </p>
-                            </div>
-                            <div class="am-u-sm-4 am-u-lg-4">
-                                <p>
-                                    <i class="am-icon-street-view "></i>
-                                    <a href="https://sanii.cn/" target="_blank">SAn Blog</a>
-                                </p>
-                                <p>
-                                    <i class="am-icon-street-view "></i>
-                                    <a href="http://www.liuzhaopo.top/" target="_blank">会打篮球的程序猿</a>
-                                </p>
-                            </div>
+                         <div id="friendLinks" class="friendLinks zhy-friendlylink-author">
+                            <!--填充友链信息-->
                         </div>
                     </div>
                 </div>
@@ -152,9 +119,7 @@
                         <div class="zhy-friendlink-info">
                             <p>任何一个行业，如果靠自己不断去探索和挖掘的话，对于自己的成长固然重要，但是有时站在巨人的肩膀上望向前方，你会发现
                                 成功和梦想其实就在前方。</p>
-                            <p>很感谢在我对于未来迷茫时帮助过我的人，也十分感谢那些素未谋面的大佬们在工作之余为我们分享技术前沿的风景。在此衷心的感谢他们，也希望更多的人在他们的帮助下共同进步。</p>
-                            <p><u><i>如果以上链接有涉及个人隐私问题，请及时联系我进行整改。</i></u></p>
-                        </div>
+                         </div>
                     </div>
                 </div>
                 <div class="am-u-sm-12 am-u-lg-12">
@@ -165,15 +130,14 @@
                         <div class="zhy-friendlylink-words">
                             <blockquote>
                                 <ul>
-                                    <li>请确认贵站可正常访问</li>
-                                    <li>原创博客、技术博客、游记博客优先</li>
-                                    <li>二十篇以上个人原创文章，两个月内有新文章更新</li>
+                                    <li>技术博客</li>
+                                    <li>原创博客</li>
+                                    <li>游记博客</li>
+                                    <li>…………</li>
+                                    
                                 </ul>
                             </blockquote>
-                            <p style="font-size: 14px">
-                                本人会长期清理无法访问的链接，请保证自己的链接长期有效<br><br>
-                                有需要互换友链的朋友也可在下方给我留言。经核实后将上挂本站点 ^_^
-                            </p>
+                          
                         </div>
                     </div>
                 </div>
@@ -211,5 +175,6 @@
 
 <script src="js/all.js"></script>
 <script src="js/leaveMessage.js"></script>
+<script src="js/friendlylink.js"></script>
 </body>
 </html>
