代码初始化

--- a/MyBlog/src/main/resources/templates/aboutme2.html
+++ b/MyBlog/src/main/resources/templates/aboutme2.html
@@ -33,7 +33,7 @@
 <table border=5 bordercolor=black align=center>
 <tr height=70 bgcolor=white align=center>
 <td width=720 colspan=6 align=center
-><font size=5 ><b><a href="http://www.cnblogs.com/shimeng-waim/p/7535072.html">个人详情</a>
+><font size=5 ><b>个人详情
 </b></font></td>
 </tr>
 
