--- a/MyBlog/src/main/resources/templates/user.html
+++ b/MyBlog/src/main/resources/templates/user.html
@@ -18,6 +18,7 @@
     <script src="https://lib.baomitu.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://lib.baomitu.com/underscore.js/1.9.1/underscore-min.js"></script>
     <script src="https://lib.baomitu.com/amazeui/2.7.2/js/amazeui.min.js"></script>
+     
 </head>
 <body>
 
@@ -119,12 +120,12 @@
                             <input class="formInput" type="text" id="phone" placeholder="填写你的手机号">
                             <hr data-am-widget="divider" style="" class="am-divider am-divider-default" />
                         </div>
-                        <div class="authCodeTable">
+                  <!--       <div class="authCodeTable">
                             <label for="authCode">验证码</label>
                             <input class="formInput" type="text" id="authCode" placeholder="填写验证码">
                             <button type="button" id="authCodeBtn" class="authCodeBtn am-btn am-btn-secondary am-round am-btn-sm">获取验证码</button>
                             <hr data-am-widget="divider" style="" class="am-divider am-divider-default" />
-                        </div>
+                        </div> -->
                         <div class="passwordTable">
                             <label for="password">新密码</label>
                             <input class="formInput" type="password" id="password" placeholder="填写你的密码">
