配置信息更改

--- a/MyBlog/src/main/resources/templates/aboutme2.html
+++ b/MyBlog/src/main/resources/templates/aboutme2.html
@@ -120,8 +120,12 @@
 </tr>
 
 <tr height=50 >
-<td width=720 colspan=6 align=center>2016.2-至今 中科软科技股份有限公司
+<td width=720 colspan=2 align=center>2016.2-2021.3 中科软
 </td>
+<td width=720 colspan=4 align=center>
+2021.4-至今 百融云创
+</td> 
+
 </tr>
 
 <tr height=50 >
